--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:padding="8dp"
         android:orientation="vertical">
 
         <TextView
@@ -35,7 +35,7 @@
             android:id="@+id/detail_date_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
 
             android:orientation="horizontal">
 
@@ -49,17 +49,11 @@
                 android:id="@+id/detail_date_textview"
                 android:text="asdad"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:gravity="center_vertical"/>
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/fake_map"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:text="This is map!"/>
 
     </LinearLayout>
 
