--- a/app/src/main/res/layout/activity_login_activity_start.xml
+++ b/app/src/main/res/layout/activity_login_activity_start.xml
@@ -4,13 +4,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.hackaton.inrange.DetailsActivity$PlaceholderFragment">
+    tools:context="com.hackaton.inrange.LoginActivityStart">
 
-    <ListView
-        android:id="@+id/person_list"
+    <Button
+        android:id="@+id/login_vk"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-
-    </ListView>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Login VK" />
 
 </RelativeLayout>
